--- a/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
@@ -49,12 +49,18 @@
                         Hire Date
                     </th>
                     <th>
+                        PPS Checked?
+                    </th>
+                    <th>
                         Years Of<br />
                         Service
                     </th>
                     <th>
                         Begin Date<br />
                         (in Title)
+                    </th>
+                    <th>
+                        PPS Checked?
                     </th>
                     <th>
                         Time<br />
@@ -103,10 +109,16 @@
                         <td class="@GetEditedClassNames(emp.PPSCareerHireDateChecked, emp.CareerDateHasBeenAdjusted)">
                             @emp.HireDate.ToShortDateString()
                         </td>
+                        <td>
+                            @(emp.PPSCareerHireDateChecked != null && emp.PPSCareerHireDateChecked ? "Y" : "N")
+                        </td>
                         <td>@String.Format("{0:0.00}", emp.YearsOfService)
                         </td>
                         <td class="@GetEditedClassNames(emp.PPSApptHireDateChecked, emp.ApptDateHasBeenAdjusted)">
                             @emp.BeginDate.ToShortDateString()
+                        </td>
+                        <td>
+                            @(emp.PPSApptHireDateChecked != null && emp.PPSApptHireDateChecked ? "Y" : "N")
                         </td>
                         <td>@String.Format("{0:0.00}", emp.TimeInTitle)
                         </td>
