--- a/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
@@ -3,11 +3,9 @@
 @*<legend>Employees</legend>*@@*<ul>*@
 @helper GetEditedClassNames(bool dateChecked, bool dateAdjusted)
     {
-    <text>
     @(dateChecked && dateAdjusted ? "date-checked-and-adjusted" : dateChecked ? "date-checked" : dateAdjusted ? "date-adjusted" : string.Empty)
-    </text>
 }
-@GetEditedClassNames(true, true)
+@*@GetEditedClassNames(true, true)*@
 @{
     if (Model.Employees.Count > 0)
     {
@@ -48,9 +46,9 @@
                     <th>
                         Hire Date
                     </th>
-                    <th>
+                    @*<th>
                         PPS Checked?
-                    </th>
+                    </th>*@
                     <th>
                         Years Of<br />
                         Service
@@ -59,9 +57,9 @@
                         Begin Date<br />
                         (in Title)
                     </th>
-                    <th>
+                    @*<th>
                         PPS Checked?
-                    </th>
+                    </th>*@
                     <th>
                         Time<br />
                         In<br />
@@ -95,6 +93,10 @@
                     <tr>
                         <td>
                             <a href="#" class="edit-row">Edit</a>
+                            <span style="display: none;" class="career-date-checked";>@(emp.PPSCareerHireDateChecked !=
+                                null && emp.PPSCareerHireDateChecked ? true : false)</span>
+                            <span style="display: none;" class="appt-date-checked";>@(emp.PPSApptHireDateChecked !=
+                                null && emp.PPSApptHireDateChecked ? true : false)</span>
                         </td>
                         <td>@emp.HomeDepartment.Name
                         </td>
@@ -109,17 +111,17 @@
                         <td class="@GetEditedClassNames(emp.PPSCareerHireDateChecked, emp.CareerDateHasBeenAdjusted)">
                             @emp.HireDate.ToShortDateString()
                         </td>
-                        <td>
+                        @*<td>
                             @(emp.PPSCareerHireDateChecked != null && emp.PPSCareerHireDateChecked ? "Y" : "N")
-                        </td>
+                        </td>*@
                         <td>@String.Format("{0:0.00}", emp.YearsOfService)
                         </td>
                         <td class="@GetEditedClassNames(emp.PPSApptHireDateChecked, emp.ApptDateHasBeenAdjusted)">
                             @emp.BeginDate.ToShortDateString()
                         </td>
-                        <td>
+                        @*<td>
                             @(emp.PPSApptHireDateChecked != null && emp.PPSApptHireDateChecked ? "Y" : "N")
-                        </td>
+                        </td>*@
                         <td>@String.Format("{0:0.00}", emp.TimeInTitle)
                         </td>
                         <td>@String.Format("{0:MM/dd/yyyy}", emp.ExperienceBeginDate)
