commented out debugger.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -84,7 +84,7 @@
 
         /* Formating function for row details */
         function fnFormatDetails(dTable, row) {
-            debugger;
+            //debugger;
             var rowContents = row[0];
             var careerChecked = (row.find(".career-date-checked").html() == "True" ? true : false);
             var apptChecked = (row.find(".appt-date-checked").html() == "True" ? true : false);
