--- a/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@model SalaryReviewAnalysisViewModel
-
+﻿@model Esra.Web.Models.SalaryReviewAnalysisViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Salary Review Analysis";
 }
-
-<h2>Index</h2>
-
