Added remaining menu partial view to Home views.
Added LoggedOut view and revised AccountController to redirect and return to LoggedOut page.
Added Filters/Role support as an optional way to handle roles similar to CRAP.
Revised _Layout to "hide" welcome message when user has logged out.
Added SalaryReviewAnalysis to _Navigation partial.

--- a/Esra.Web/Views/Home/Index.cshtml
+++ b/Esra.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Esra.Web.Resources
 @{
-    ViewBag.Title = "ESRA Home";
+    ViewBag.Title = "Home";
 }
 <h2>@ViewBag.Message</h2>
 <div id="roles">
@@ -21,6 +21,7 @@
     }
     else
     {
+        //GlobalConstants.ROLE_USER
         @Html.Partial("_DepartmentsMenu")
     }
 </div>
