--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,6 @@
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
     }
     @MvcMiniProfiler.MiniProfiler.RenderIncludes()
-
     @RenderSection("AdditionalScripts", false)
 </head>
 <body>
@@ -47,7 +46,8 @@
         </div>
         <div id="personalbar">
             <div class="col1">
-                <span id="welcome_user">Welcome @User.Identity.Name!</span>
+                <span id="welcome_user" @(User.Identity == null || User.Identity.Name == String.Empty ? "style=display:none;" : String.Empty)>
+                    Welcome @User.Identity.Name!</span>
             </div>
             <div class="col2" id="LogOffOn">
                 @Html.ActionLink("Logoff", "LogOut", "Account")
