--- a/Esra.Web/Views/Shared/_Navigation.cshtml
+++ b/Esra.Web/Views/Shared/_Navigation.cshtml
@@ -1,6 +1,7 @@
 ﻿<ul class="navigation">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-    <li>@Html.ActionLink("Salary Scale", "Index", "SalaryScale")</li>
+    <li>@Html.ActionLink("Salary Scales", "Index", "SalaryScale")</li>
     <li>@Html.ActionLink("Employee Salary Comparison", "Index", "EmployeeSalaryComparison")</li>
+    <li>@Html.ActionLink("Salary Review Analysis", "Index", "SalaryReviewAnalysis")</li>
     <li>@Html.ActionLink("About", "About", "Home")</li>
 </ul>
