Revised menu views and broke UserAdmin out into it's own separate controller.
Added demo capability.
Modified _Navigation to include link to UserAdmin (as appropriate).
Added "About" text. to About view.
Broke out EmulateUser into it's own partial _EmulateUser, and removed it from individual menu partial views.
Revised HomeController and added HomeViewModel and a repository.

--- a/Esra.Web/Views/Home/About.cshtml
+++ b/Esra.Web/Views/Home/About.cshtml
@@ -1,8 +1,24 @@
 ﻿@{
-    ViewBag.Title = "About Us";
+    ViewBag.Title = "About";
 }
-
-<h2>About</h2>
+<h2>
+    Employee Salary Review and Analysis (ESRA)</h2>
 <p>
-     Put content here.
+    <br />
+    ESRA is an application that consolidates payroll, personnel, and job pay rate/classification<br />
+    data from several different sources into a single application.<br />
+    <br />
+    This data is then used to compare and analyze salaries among various titles<br />
+    and/or personnel in order to formulate and propose salary adjustments due to equity
+    considerations<br />
+    or reclassification.
+    <br />
+    <br />
+    Prior to this application various data sources would need to be accessed
+    <br />
+    individually, and then combined into an Excel spreadsheet for comparison.
+    <br />
+    <br />
+    The pilot system originally consisted of 21 users, but was ultimately intended<br />
+    to be used by many more once the pilot program had been completed.<br />
 </p>
