--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <title>ESRA - @ViewBag.Title</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")" />
     <link href="@Url.Css("main.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Css("jquery-ui-1.8.11.custom.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Css("extended.css")" rel="stylesheet" type="text/css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js" type="text/javascript"></script>
     <script src="@Url.Script("DataTables-1.8.1/media/js/jquery.dataTables.min.js")" type="text/javascript"></script>
-    <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
+    <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
+        type="text/javascript"></script>
     <script src="@Url.Script("jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
@@ -101,14 +102,13 @@
             $('input, textarea').placeholder();
         });
     </script>
-    *@ @*----------- Google Analytics ---------- *@
-    <script>
+    *@ @*----------- Google Analytics ---------- *@ @*<script>
         var _gaq = [["_setAccount", "UA-XXXXX-X"], ["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID
         (function (d, t) {
             var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; g.async = 1;
             g.src = ("https:" == location.protocol ? "//ssl" : "//www") + ".google-analytics.com/ga.js";
             s.parentNode.insertBefore(g, s)
         } (document, "script"));
-    </script>
+    </script>*@
 </body>
 </html>
