Revised _EmulateUser partial to not render if user does not have _EmulationUser role.
Continued work on SalaryReviewAnalysis view, controller and model.

--- a/Esra.Web/Views/Home/_EmulateUser.cshtml
+++ b/Esra.Web/Views/Home/_EmulateUser.cshtml
@@ -1,10 +1,12 @@
-﻿<div id="div-emulate-user" @if (User.IsInRole("EmulationUser") == false)
-                           { <text>style="display: none;"</text> }
-                                 >
-    @using (Html.BeginForm("Emulate", "Account", FormMethod.Post))
-    {
-        @Html.TextBox("id")
+﻿@{ if (User.IsInRole("EmulationUser"))
+   {
+    <div id="div-emulate-user">
+        @using (Html.BeginForm("Emulate", "Account", FormMethod.Post))
+        {
+            @Html.TextBox("id")
 
-        <input id="btnEmulateUserSubmit" type="submit" value="Emulate" />
-    }
-</div>
+            <input id="btnEmulateUserSubmit" type="submit" value="Emulate" />
+        }
+    </div>
+   }
+}
