--- a/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
@@ -2,3 +2,10 @@
 @{
     ViewBag.Title = "Salary Review Analysis";
 }
+<div id="salary-review-analysis-selector">
+    @Html.Partial("_SalaryReviewAnalysisSearchParamaters")
+</div>
+<div id="salary-review-analysis-listing">
+</div>
+<div id="new-salary-review-analysis-employee-selector">
+</div>
