--- a/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
@@ -6,6 +6,7 @@
     @Html.Partial("_SalaryReviewAnalysisSearchParamaters")
 </div>
 <div id="salary-review-analysis-listing">
+    @Html.Partial("_SalaryReviewAnalysisSearchResults")
 </div>
 <div id="new-salary-review-analysis-employee-selector">
 </div>
