--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
@@ -106,4 +106,13 @@
         </table>
     </div>
     }
+    else
+    {
+    <fieldset>
+        <br />
+        <h3>
+            &nbsp;&nbsp;No Results Found Matching Search Parameters</h3>
+        <br />
+    </fieldset>
+    }
 }
